--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="scripts/script.js"></script>
 	<title>Travel To 5 Places</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
