--- a/destinations.html
+++ b/destinations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="scripts/script.js"></script>
 	<meta charset="UTF-8">
 	<title>Destinations</title>
 	<link rel="stylesheet" href="styles.css">
