--- a/destinations.html
+++ b/destinations.html
@@ -10,7 +10,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.php">Home</a></li>
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
