--- a/index1.html
+++ b/index1.html
@@ -9,10 +9,11 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.php">Home</a></li>
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
+				<li><?php echo date('Y-m-d H:i:s'); ?></li>
 			</ul>
 		</nav>
 	</header>
