--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.php">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
-				<li><?php echo date('Y-m-d H:i:s'); ?></li>
+				<p>Current date and time: <?php echo date('Y-m-d H:i:s'); ?></p>
 			</ul>
 		</nav>
 	</header>
