--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<script src="scripts/script.js"></script>
+	<script src="scripts/current_date.js"></script>
 	<title>Travel To 5 Places</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body onload="displayCurrentDate()">
 	<header>
 		<nav>
 			<ul>
@@ -13,6 +14,7 @@
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
+				<li>Поточна дата: <span id="current-date"></span></li>
 			</ul>
 		</nav>
 	</header>
