--- a/destinations.html
+++ b/destinations.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<script src="scripts/script.js"></script>
+	<script src="scripts/current_date.js"></script>
 	<meta charset="UTF-8">
 	<title>Destinations</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="displayCurrentDate()">
 	<header>
 		<nav>
 			<ul>
@@ -14,6 +15,7 @@
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
+				<li>Поточна дата: <span id="current-date"></span></li>
 			</ul>
 		</nav>
 		<h2>Travel Destinations</h2>
