--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<li><a href="destinations.html">Destinations</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="about_us.html">About Us</a></li>
-				<li>Поточна дата: <span id="current-date"></span></li>
+				<li><span id="current-date"></span></li>
 			</ul>
 		</nav>
 	</header>
