--- a/reviews.html
+++ b/reviews.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Система відгуків</title>
-  <script src="scripts/current_date.js"></script>
+  <meta charset="UTF-8">
+  <script charset="UTF-8" src="scripts/current_date.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script>
+  <script charset="UTF-8">
     function addReview() {
       var name = document.getElementById('name').value; 
       var comment = document.getElementById('comment').value;
