--- a/destinations.html
+++ b/destinations.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src="scripts/script.js"></script>
-	<script src="scripts/current_date.js"></script>
+	<script charset="UTF-8" src="scripts/script.js"></script>
+	<script charset="UTF-8" src="scripts/current_date.js"></script>
 	<meta charset="UTF-8">
 	<title>Destinations</title>
 	<link rel="stylesheet" href="styles.css">
