--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="scripts/script.js"></script>
-	<script src="scripts/current_date.js"></script>
+	<script charset="UTF-8" src="scripts/script.js"></script>
+	<script charset="UTF-8" src="scripts/current_date.js"></script>
+	<meta charset="UTF-8">
 	<title>Travel To 5 Places</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
