what da heeeeeeeeeeeeeell
oooohh maaa gaaad nOoWaAy

--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
       var comment = document.getElementById('comment').value;
       
       if (name.trim() === '' || comment.trim() === '') {
-        alert('Будь ласка, заповніть всі поля!');
+        alert('Будь ласка, заповніть всі поля.');
         return;
       }
       
@@ -40,7 +40,7 @@
 		</nav>
 	</header>
 <main>
-  <h1>Система відгуків</h1>
+  <h1>Reviews</h1>
   
   <form>
     <label for="name">Ім'я:</label>
